# pgltools

./: .gitignore  Dockerfile  LICENSE  README.md  changelog.md  pyproject.toml
.github/workflows/: pytest.yml
Module/: setup.py
Module/PyGLtools/: __init__.py  browser.py  closest.py  closest1D.py  column_flip.py  condense.py  conveRt.py  coverage.py  expand.py  findLoops.py  formatTripSparse.py  intersect.py  intersect1D.py  juicebox.py  merge.py  pgltools_library.py  samTopgl.py  subtract.py  subtract1D.py  window.py
Module/PyGLtools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Python/: browser.py  closest.py  closest1D.py  column_flip.py  condense.py  conveRt.py  coverage.py  expand.py  findLoops.py  formatTripSparse.py  intersect.py  intersect1D.py  juicebox.py  merge.py  pgltools_library.py  samTopgl.py  subtract.py  subtract1D.py  window.py
Test_Data/: README.md  file.A.bed  file.A.sorted.pgl  file.B.pgl  test_sam.sam
sh/: pgltools
tests/: README.md  test_browser.py  test_closest.py  test_closest1D.py  test_column_flip.py  test_command_line_interface.py  test_condense.py  test_conveRt.py  test_coverage.py  test_expand.py  test_findLoops.py  test_intersect.py  test_intersect1D.py  test_juicebox.py  test_merge.py  test_samTopgl.py  test_subtract.py  test_subtract1D.py  test_window.py
tests/fixtures/: README.md  file.A.genome.txt  file.A.genome2.txt  file.A.pgl  file.A.sorted.annotated.pgl  file.B.annotated.bed  file.B.bed  file.B.sorted.annotated.pgl  file.B.sorted.pgl  intra_chromosome.A.pgl  issue12_example.bed
(+73 files in other folders)
